--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+unitygamelab/Temp/FSTimeGet-91c278269e384c645adcce645b28159c
+unitygamelab/Temp/FSTimeGet-c9bd4982d769d734e97f2dd25cd18e7e
+unitygamelab/Temp/FSTimeGet-d6f7d331ef91aa34eb8823e84a20c2d3
+unitygamelab/Temp/PropertyDatabase_1265138678
+unitygamelab/Temp/PropertyDatabase_2066312223
+unitygamelab/Temp/UnityLockfile
